tests/errors/semantic/blocking/HEADER_WRONG_NUMBER_TYPES.py
#$ header function func(int)
def func(n,m):
    return n + m
